<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ro.pub.cs.systems.pdsd.practicaltest001.PracticalTest01MainActivity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:text="@string/navigate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

      	<EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:saveEnabled="false"
            android:enabled="false"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:text="0" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:saveEnabled="false"
            android:enabled="false"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:text="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
	        android:layout_width="0dp"
      		android:layout_height="wrap_content"
      		android:layout_weight="1"
	        >
        
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pressRight" />

        </ScrollView>
        
        <ScrollView
	        android:layout_width="0dp"
      		android:layout_height="wrap_content"
      		android:layout_weight="1"
	        >
        
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pressLeft" />
        
        </ScrollView>

    </LinearLayout>

</LinearLayout>
